# aoc2020

./: .gitmodules  CMakeLists.txt  README.md
aocutils/: aocutils.cpp  aocutils.h  ctre.h  life.h  overloaded.h  utils.cpp  utils.h
day01/: main.cpp
day02/: main.cpp
day03/: main.cpp
day04/: main.cpp
day05/: main.cpp
day06/: main.cpp
day07/: main.cpp
day08/: main.cpp
day09/: main.cpp
day1/: main.cpp
day10/: main.cpp
day11/: main.cpp
day12/: main.cpp
day13/: main.cpp  part2.py
day14/: main.cpp
day15/: main.cpp
day16/: main.cpp
day17/: main.cpp
day18/: main.cpp  part_two.cpp
day19/: main.cpp
day2/: main.cpp
day20/: main.cpp
day21/: main.cpp
day22/: main.cpp
day23/: main.cpp
day24/: main.cpp
day25/: main.cpp
day3/: main.cpp
day4/: main.cpp
day5/: main.cpp
day6/: main.cpp
day7/: main.cpp
day8/: main.cpp
day9/: main.cpp
input/: day16_constraints.txt  day18.txt  day19_rules.txt  day19_rules_mod.txt  day6.txt
input/day19/: rules_ex.txt
